@@ -1,3 +1,5 @@
+* Ensure select()/match() return an empty array/false for unsupported/invalid selectors. [jddalton]
+
 * Make the definition of `RE_SIMPLE_SELECTOR` more granular, tweak private byName() usage for IE, and simplify the public byClass(), byName(), and byTag(). [jddalton]
 
 * Ensure compileSelector() handles tag selectors as case-insensitive for non-html elements. [jddalton]
